# grpc-example

./: readme.md
client-py/: main.py  service.proto  service_pb2.py  service_pb2_grpc.py
server-cpp/: CMakeLists.txt  main.cpp  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
